fixed top nav item vertical alignment on fullscreen

--- a/css/custom.css
+++ b/css/custom.css
@@ -358,6 +358,10 @@ MEDIA QUERIES
         display: block;
     } 
 
+    #top-nav-items {
+        padding-bottom: 0px!important;
+    }
+
 }
 
 
